# QBar

./: .gitignore  .mainwindow.cpp.swp  .remotemediaview.cpp.swp  CMakeLists.txt  README.md  appconfig.cpp  appconfig.h  filebrowserwidget.cpp  filebrowserwidget.h  filebrowserwidget.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediaviewwidget.cpp  mediaviewwidget.h  mediaviewwidget.ui  playercontrolswidget.cpp  playercontrolswidget.h  playercontrolswidget.ui  playlist.cpp  playlist.h  remotefilebrowser.cpp  remotefilebrowser.h  remotefilebrowser.ui  remotemediaview.cpp  remotemediaview.h  remotemediaview.ui  serverinputbox.cpp  serverinputbox.h  tash
